# midpoint

./: Cargo.toml  DESIGN.md  DEV-README.MD  README.md
benches/: my_benchmark.rs
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_bitwise_ops/base/: raw.csv  sample.json  tukey.json
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_bitwise_ops/new/: benchmark.json  estimates.json
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_bitwise_ops/report/: index.html
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_cpp_20_std_implementation/base/: benchmark.json  estimates.json  raw.csv
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_cpp_20_std_implementation/new/: sample.json  tukey.json
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_cpp_20_std_implementation/report/: index.html
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_naive_midpoint_diff/base/: raw.csv  sample.json  tukey.json
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_naive_midpoint_diff/new/: benchmark.json  estimates.json
criterion_reports/JohnScience/i128 same input/i128 __ midpoint_via_naive_midpoint_diff/report/: index.html
criterion_reports/JohnScience/i128 same input/i128 __ naive_midpoint/base/: estimates.json  raw.csv
criterion_reports/JohnScience/i128 same input/i128 __ naive_midpoint/new/: benchmark.json  sample.json  tukey.json
criterion_reports/JohnScience/i128 same input/i128 __ naive_midpoint/report/: index.html
criterion_reports/JohnScience/i128 same input/report/: index.html
criterion_reports/JohnScience/i16 same input/report/: index.html
criterion_reports/JohnScience/i32 same input/report/: index.html
criterion_reports/JohnScience/i64 same input/report/: index.html
criterion_reports/JohnScience/i8 same input/report/: index.html
criterion_reports/JohnScience/report/: index.html
criterion_reports/JohnScience/u128 same input/report/: index.html
criterion_reports/JohnScience/u16 same input/report/: index.html
criterion_reports/JohnScience/u32 same input/report/: index.html
criterion_reports/JohnScience/u64 same input/report/: index.html
criterion_reports/JohnScience/u8 same input/report/: index.html
src/: bitwise.rs  common_macros.rs  cpp_20_std.rs  lib.rs  macros.rs  main.rs  naive.rs  naive_midpoint_diff.rs  primitive_promotion.rs
(+264 files in other folders)
