[package]
name = "midpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive_promotion = "0.1.3"
epsi = "0.1.1"
epui = "0.1.1"

[features]
const_trait_impl = []
unchecked_math = []
const_inherent_unchecked_arith = []