[package]
name = "midpoint"
version = "0.1.5"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
#rust-version = "1.56.1"  #https://github.com/foresterre/cargo-msrv
description = "Extension traits offering implementations of midpoint [currently, only for primitive integers]."
documentation = "https://docs.rs/midpoint"
readme = "README.md"
repository = "https://github.com/JohnScience/midpoint"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["extension", "midpoint", "average", "mean"]
categories = ["no-std", "mathematics"] # https://crates.io/category_slugs 
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/**",
    "/benches/**"
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive_promotion = "0.1.3"
epsi = "0.1.1"
epui = "0.1.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[features]
all = ["const_trait_impl", "const_fn_trait_bound", "unchecked_math", "const_inherent_unchecked_arith"]
const_trait_impl = []
const_fn_trait_bound = []
unchecked_math = []
const_inherent_unchecked_arith = []